k8s/dev/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: back
  ports:
    - name: http
      port: 8080
      targetPort: 8080
