k8s/dev/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: front
  ports:
    - name: http
      port: 3000
      targetPort: 3000
